# viz

./: .gitignore  0  CMakeLists.txt  Makefile  README.md  bf2viz.py  brainf.s  datatypes.cpp  datatypes.h  definitions.h  functions.cpp  functions.h  gensw.py  hello.viz  hello.vsm  main  main.cpp  mainA  switch.cpp  switch.h  thisfile.txt  vrk
assembler/: CMakeLists.txt  Makefile  assembler.cpp  definitions.h  definitions.hpp  functions_assembler.cpp  functions_assembler.h  functions_assembler.hpp  switch.cpp  switch.hpp
modules/: Makefile
runtime/: CMakeLists.txt  Makefile  datatypes.cpp  datatypes.h  datatypes.hpp  functions_runtime.cpp  functions_runtime.h  functions_runtime.hpp  modules_enable.h  modules_enable.hpp  runtime.cpp
runtime-embedded/: CMakeLists.txt  functions_rt_embedded.c  functions_rt_embedded.h  runtime_embedded.c  types.c  types.h
runtime-embedded/architecture-dependent/: CMakeLists.txt  architecture-dependent.h
runtime-embedded/architecture-dependent/default-pc/: CMakeLists.txt  default-pc.c
runtime/modules/: Makefile  console.cpp  console.h  console.hpp
runtime/tests/: CMakeLists.txt  hello.vsm
